--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 node_modules/
 .env
+.env.local
+.env.development
 *.log
 .DS_Store
 coverage/
@@ -7,3 +9,6 @@ coverage/
 .idea/
 dist/
 build/
+
+# Allow production env files
+!.env.production
