--- a/.env.production
+++ b/.env.production
@@ -3,6 +3,9 @@ PORT=3006
 NODE_ENV=production
 LOG_LEVEL=info
 
+# MongoDB Configuration (MongoDB Atlas)
+MONGODB_URI=mongodb+srv://ikettunen:79zKkjAThGVC5wtt@cluster0.dq4dv.mongodb.net/nursing_home_notifications?retryWrites=true&w=majority&appName=Cluster0
+
 # CORS Configuration
 # EC2 Public IP
 AWS_ELASTIC_IP=51.20.164.143
